alignment issue attempt #645

--- a/css/works-template.css
+++ b/css/works-template.css
@@ -1,15 +1,14 @@
 
 .outline-col > ul {
     list-style:none;
-    padding:0;
-    margin:0;
 }
 
-.page-wrapper {
-    height: 96vh;
+/*.page-wrapper {
+    height: 84vh;
+    width: auto;
     display: table-cell;
     vertical-align: middle;
-}
+}*/
 
 
 /*img hover shadow*/
